--- a/css/style.css
+++ b/css/style.css
@@ -1932,6 +1932,60 @@ button.blog-read:hover {
 
 /* ------------------------------------------
     ------------------------------------------
-14. Services
+14. Career
 ------------------------------------------
 ------------------------------------------ */
+.careers-section {
+    margin: 100px 0 80px 0;
+}
+
+.careers-section h2 {
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.careers-section h3 {
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.careers-section .icon-ico {
+    background: #fbba42;
+    width: 110px;
+    height: 110px;
+    margin: 0 auto;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.careers-section p {
+    margin-bottom: 50px;
+}
+
+.job-details {
+    background: #f7f7fd;
+    padding: 35px;
+}
+
+.job-details h3 {
+    border-bottom: 1px solid #fbba42;
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+}
+
+.job-details li {
+    margin-bottom: 25px;
+    font-weight: 500;
+    padding: 0;
+    color: #777777;
+}
+
+.job-requires li {
+    list-style: circle;
+    margin-bottom: 20px;
+    font-size: 17px;
+    color: #777777;
+}
