--- a/css/meanmenu.css
+++ b/css/meanmenu.css
@@ -18,32 +18,34 @@ a.meanmenu-reveal {
 	float: left;
 	width: 100%;
 	position: relative;
+	background: #0c1923;
+	padding: 4px 0;
 	min-height: 42px;
-	z-index: 999;
+	z-index: 999999;
 }
 
 .mean-container a.meanmenu-reveal {
 	width: 22px;
 	height: 22px;
-	padding: 10px;
+	padding: 13px 13px 11px 13px;
 	position: absolute;
 	top: 0;
 	right: 0;
 	cursor: pointer;
-	color: #333333;
+	color: #fff;
 	text-decoration: none;
 	font-size: 16px;
+	text-indent: -9999em;
 	line-height: 22px;
 	font-size: 1px;
 	display: block;
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: 700;
-	border: 3px solid #333333;
 }
 
 .mean-container a.meanmenu-reveal span {
 	display: block;
-	background: #333333;
+	background: #fff;
 	height: 3px;
 	margin-top: 3px;
 }
@@ -52,7 +54,7 @@ a.meanmenu-reveal {
 	float: left;
 	width: 100%;
 	background: #0c1923;
-	margin-top: 5px;
+	margin-top: 44px;
 }
 
 .mean-container .mean-nav ul {
@@ -120,8 +122,8 @@ a.meanmenu-reveal {
 
 .mean-container .mean-nav ul li a.mean-expand {
 	margin-top: 1px;
-	width: 21px;
-	height: 21px;
+	width: 26px;
+	height: 32px;
 	padding: 12px !important;
 	text-align: center;
 	position: absolute;
