--- a/css/meanmenu.css
+++ b/css/meanmenu.css
@@ -18,7 +18,7 @@ a.meanmenu-reveal {
 	float: left;
 	width: 100%;
 	position: relative;
-	background: #0c1923;
+	background: #transparent;
 	padding: 4px 0;
 	min-height: 42px;
 	z-index: 999999;
@@ -27,12 +27,12 @@ a.meanmenu-reveal {
 .mean-container a.meanmenu-reveal {
 	width: 22px;
 	height: 22px;
-	padding: 13px 13px 11px 13px;
+	padding: 13px 0 11px 0;
 	position: absolute;
 	top: 0;
 	right: 0;
 	cursor: pointer;
-	color: #fff;
+	color: #646464;
 	text-decoration: none;
 	font-size: 16px;
 	text-indent: -9999em;
@@ -45,16 +45,17 @@ a.meanmenu-reveal {
 
 .mean-container a.meanmenu-reveal span {
 	display: block;
-	background: #fff;
+	background: #646464;
 	height: 3px;
 	margin-top: 3px;
 }
 
 .mean-container .mean-nav {
-	float: left;
+	float: right;
 	width: 100%;
-	background: #0c1923;
-	margin-top: 44px;
+	margin-top: 50px;
+	position: fixed;
+	left: 0;
 }
 
 .mean-container .mean-nav ul {
@@ -68,12 +69,13 @@ a.meanmenu-reveal {
 	position: relative;
 	float: left;
 	width: 100%;
+	background: #0c1923;
 }
 
 .mean-container .mean-nav ul li a {
 	display: block;
 	float: left;
-	width: 90%;
+	width: 100%;
 	padding: 1em 5%;
 	margin: 0;
 	text-align: left;
@@ -115,30 +117,15 @@ a.meanmenu-reveal {
 	padding: 1em 25%;
 }
 
-.mean-container .mean-nav ul li a:hover {
-	background: #252525;
-	background: rgba(255,255,255,0.1);
-}
-
 .mean-container .mean-nav ul li a.mean-expand {
-	margin-top: 1px;
-	width: 26px;
-	height: 32px;
-	padding: 12px !important;
-	text-align: center;
+	padding: 1em 5% !important;
+	text-align: right;
 	position: absolute;
 	right: 0;
 	top: 0;
 	z-index: 2;
 	font-weight: 700;
-	background: rgba(255,255,255,0.1);
 	border: none !important;
-	border-left: 1px solid rgba(255,255,255,0.4) !important;
-	border-bottom: 1px solid rgba(255,255,255,0.2) !important;
-}
-
-.mean-container .mean-nav ul li a.mean-expand:hover {
-	background: rgba(0,0,0,0.9);
 }
 
 .mean-container .mean-push {
