--- a/css/style.css
+++ b/css/style.css
@@ -1042,7 +1042,9 @@ header.header-transparent a:hover {
     cursor: pointer;
 }
 
-/*Portfolio Variant 2 (home 2)*/
+/*Portfolio Variant 2 (home 2-3)*/
+.portfolio-variant-2 {height: 100%;}
+
 .portfolio-variant-2 .portfolio-wrapper {
     margin-bottom: 0;
 }
