--- a/css/style.css
+++ b/css/style.css
@@ -25,17 +25,8 @@
 16. Shop
 */
 
-/* ------------------------------------------
-    ------------------------------------------
-1. Global CSS
-------------------------------------------
------------------------------------------- */
+/*--- 1. Global CSS ---*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
-
-/*
-font-family: 'Poppins', sans-serif;
-font-family: 'Work Sans', sans-serif;
-*/
 
 html {
     scroll-behavior: smooth;
@@ -123,11 +114,7 @@ textarea:focus, input:focus, button:focus {
     outline: none;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-2. Header
-------------------------------------------
------------------------------------------- */
+/*--- 2. Header --- */
 /* header top */
 .header-top {
     border-bottom: 1px solid #fbba42;
@@ -292,6 +279,7 @@ textarea:focus, input:focus, button:focus {
 
 .main-menu ul {
     margin-right: 40px;
+    text-transform: capitalize;
 }
 
 .main-menu ul li {
@@ -503,11 +491,7 @@ header.header-transparent a:hover {
     justify-content: center;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-3. Hero Section
-------------------------------------------
------------------------------------------- */
+/* --- 3. Hero Section ---*/
 .hero-section {
     margin: 0 75px;
 }
@@ -626,11 +610,7 @@ header.header-transparent a:hover {
     border: 0;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-4. Services
-------------------------------------------
------------------------------------------- */
+/*--- 4. Services --- */
 .services-section {
     margin: 0 75px;
 }
@@ -694,11 +674,7 @@ header.header-transparent a:hover {
     font-weight: 600;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-5. Promo
-------------------------------------------
------------------------------------------- */
+/*--- 5. Promo ---*/
 .promo {
     background: #f7f7fd;
     position: relative;
@@ -789,11 +765,7 @@ header.header-transparent a:hover {
     margin: 110px 0;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-6. Portfolio
-------------------------------------------
------------------------------------------- */
+/*--- 6. Portfolio ---*/
 .portfolio-section {
     height: 100%;
     margin-bottom: 90px;
@@ -972,11 +944,7 @@ header.header-transparent a:hover {
     margin-bottom: 24px;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-7. Team Members
-------------------------------------------
------------------------------------------- */
+/*--- 7. Team Members ---*/
 .team-section {
     margin-bottom: 90px;
 }
@@ -1146,11 +1114,7 @@ header.header-transparent a:hover {
     margin: 0 0 10px 0;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-8. Counter
-------------------------------------------
------------------------------------------- */
+/*--- 8. Counter ---*/
 .counter-section {
     background: url('../img/counter/counter-bg.jpg');
     background-position: center;
@@ -1238,11 +1202,7 @@ header.header-transparent a:hover {
     height: 300px;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-9. Recent Posts
-------------------------------------------
------------------------------------------- */
+/*--- 9. Recent Posts ---*/
 .recent-posts {
     background: #f7f7fd;
     margin: 0 75px;
@@ -1439,11 +1399,7 @@ button.blog-read:hover {
     background: transparent;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-10. Testimonial
-------------------------------------------
------------------------------------------- */
+/*--- 10. Testimonial ---*/
 .testimonial-section {
     margin: 0 75px;
 }
@@ -1555,11 +1511,7 @@ button.blog-read:hover {
     margin: 35px;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-11. Accordion
-------------------------------------------
------------------------------------------- */
+/*--- 11. Accordion ---*/
 .accordion .card {
     border: 0;
     margin-bottom: 30px;
@@ -1621,11 +1573,7 @@ button.blog-read:hover {
 }
 
 
-/* ------------------------------------------
-    ------------------------------------------
-12. Footer
-------------------------------------------
------------------------------------------- */
+/*--- 12. Footer ---*/
 .footer-section {
     background: #f7f7fd;
     margin: 0 75px;
@@ -1770,7 +1718,7 @@ button.blog-read:hover {
     cursor: pointer;
 }
 
-/*Home 2 */
+/*Footer (Home 2) */
 .footer-full-width .footer-section {
     margin: 0;
 }
@@ -1787,11 +1735,7 @@ button.blog-read:hover {
     margin: 0;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-13. Title & Breadcrumb Pages
-------------------------------------------
------------------------------------------- */
+/*--- 13. Title & Breadcrumb ---*/
 .title-breadcrumb .hero-bg {
     height: 420px;
     display: flex;
@@ -1808,11 +1752,7 @@ button.blog-read:hover {
     padding: 0;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-14. Career
-------------------------------------------
------------------------------------------- */
+/*--- 14. Career page ---*/
 .careers-section {
     margin: 100px 0 80px 0;
 }
@@ -1868,11 +1808,7 @@ button.blog-read:hover {
     color: #777777;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-15. Contact us
-------------------------------------------
------------------------------------------- */
+/*--- 15. Contact us page ---*/
 .contact-us {
     margin: 100px 0;
 }
@@ -1969,11 +1905,7 @@ button.blog-read:hover {
     margin-bottom: 40px;
 }
 
-/* ------------------------------------------
-    ------------------------------------------
-16. Shop
-------------------------------------------
------------------------------------------- */
+/*--- 16. Shop page ---*/
 .shop {
     padding: 100px 0;
 }
