--- a/css/style.css
+++ b/css/style.css
@@ -551,7 +551,7 @@ header.header-transparent a:hover {
     padding: 0 150px 30px 0;
 }
 
-.hero-content button {
+.hero-content a {
     padding: 16px 41px;
     text-transform: uppercase;
     background: #333333;
@@ -563,7 +563,7 @@ header.header-transparent a:hover {
     transition: 0.3s;
 }
 
-.hero-content button:hover {
+.hero-content a:hover {
     background: #fbba42;
     cursor: pointer;
 }
@@ -615,7 +615,7 @@ header.header-transparent a:hover {
     padding-bottom: 20px;
 }
 
-.hero-sec-v3 .hero-content button {
+.hero-sec-v3 .hero-content a {
     border-radius: 50px;
     border: 0;
 }
@@ -727,7 +727,7 @@ header.header-transparent a:hover {
     margin-bottom: 30px;
 }
 
-.promo-content button {
+.promo-content a {
     padding: 15px 40px;
     text-transform: uppercase;
     background: #fbba42;
@@ -739,7 +739,7 @@ header.header-transparent a:hover {
     transition: 0.3s;
 }
 
-.promo-content button:hover {
+.promo-content a:hover {
     background: #333333;
     color: #fff;
     cursor: pointer;
@@ -751,12 +751,12 @@ header.header-transparent a:hover {
     height: 100%;
 }
 
-.promo-variant-2 .promo-content button {
+.promo-variant-2 .promo-content a {
     background: transparent;
     border: 1px solid #fbba42;
 }
 
-.promo-variant-2 .promo-content button:hover {
+.promo-variant-2 .promo-content a:hover {
     background: #fbba42;
 }
 
@@ -879,7 +879,7 @@ header.header-transparent a:hover {
     visibility: visible;
 }
 
-.portfolio-button button {
+.portfolio-button a {
     padding: 15px 40px;
     text-transform: uppercase;
     background: #fbba42;
@@ -891,7 +891,7 @@ header.header-transparent a:hover {
     transition: 0.3s;
 }
 
-.portfolio-button button:hover {
+.portfolio-button a:hover {
     background: #333333;
     color: #fff;
     cursor: pointer;
